ch9/ch9-start/iac-macro-usage/tests/fails/lambda_typo.rs
use iac_macro::iac;

fn main() {
    iac! {
        lamba name
    }
}
