ch9/ch9-start/iac-macro-usage/tests/fails/lambda_typo.stderr
error: only 'bucket' and 'lambda' resources are supported
 --> tests/fails/lambda_typo.rs:5:9
  |
5 |         lamba name
  |         ^^^^^
